// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconToggle /> should be able to render 1`] = `
<i
  aria-disabled={false}
  className="mdc-icon-toggle material-icons"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex="0"
>
  favorite_border
</i>
`;

exports[`<IconToggle /> should render accent 1`] = `
<i
  aria-disabled={false}
  className="mdc-icon-toggle material-icons mdc-icon-toggle--accent"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex="0"
>
  favorite_border
</i>
`;

exports[`<IconToggle /> should render disabled 1`] = `
<i
  aria-disabled={true}
  className="mdc-icon-toggle material-icons mdc-icon-toggle--disabled"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex="0"
>
  favorite_border
</i>
`;

exports[`<IconToggle /> should render primary 1`] = `
<i
  aria-disabled={false}
  className="mdc-icon-toggle material-icons mdc-icon-toggle--primary"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex="0"
>
  favorite_border
</i>
`;
